Removing balance tree. It is being reimplemented as a bvh tree in QGL_Physics. Tree helpers for K-d trees.

--- a/QGL_Physics/QGL_Physics.vcxproj
+++ b/QGL_Physics/QGL_Physics.vcxproj
@@ -161,6 +161,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\Collision\qgl_bounding.h" />
     <ClInclude Include="include\Collision\qgl_bvh_tree.h" />
     <ClInclude Include="include\qgl_physics_include.h" />
     <ClInclude Include="include\Rigid-Bodies\qgl_rb_integration.h" />
