Add and test code for rounding numbers and comparing DirectX vectors and bounding volumes.

--- a/Tests/QGL_Math.UnitTests/QGL_Math.UnitTests.vcxproj
+++ b/Tests/QGL_Math.UnitTests/QGL_Math.UnitTests.vcxproj
@@ -216,6 +216,7 @@
     <ClCompile Include="Tests\comparison_function_tests.cpp" />
     <ClCompile Include="Tests\math_function_tests.cpp" />
     <ClCompile Include="Tests\rational_number_tests.cpp" />
+    <ClCompile Include="Tests\rectangle_tests.cpp" />
     <ClCompile Include="UnitTestApp.xaml.cpp">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
     </ClCompile>
