--- a/Tests/QGL_Math.UnitTests/QGL_Math.UnitTests.vcxproj.filters
+++ b/Tests/QGL_Math.UnitTests/QGL_Math.UnitTests.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Tests\rational_number_tests.cpp">
       <Filter>Tests</Filter>
     </ClCompile>
+    <ClCompile Include="Tests\rectangle_tests.cpp">
+      <Filter>Tests</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
