--- a/QGL_Model/QGL_Model.vcxproj
+++ b/QGL_Model/QGL_Model.vcxproj
@@ -146,6 +146,8 @@
   <ItemGroup>
     <ClInclude Include="include\Interfaces\qgl_icommand.h" />
     <ClInclude Include="include\Interfaces\qgl_interface.h" />
+    <ClInclude Include="include\Memory\qgl_basic_heap.h" />
+    <ClInclude Include="include\Memory\qgl_heap_traits.h" />
     <ClInclude Include="include\Memory\qgl_mem.h" />
     <ClInclude Include="include\Memory\qgl_memory_track_entry.h" />
     <ClInclude Include="include\Memory\qgl_mem_tracker.h" />
